--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <title>Belly Button Biodiversity</title>
+    <title>Belly Button Biodiversity Dashboard</title>
 </head>
 
 <body>
     <div class="jumbotron">
         <div class="container">
-            <h1>Belly Button Biodiversity</h1>
-            <p>An interactive dashboard of microbacteria samples of belly buttons.</p>
+            <h1>Belly Button Biodiversity Dashboard</h1>
+            <p>Use the interactive dashboard below to explore the dataset.</p>
         </div>
     </div>
     <div class="container">
